# perfect_console

./: .gitattributes  .gitignore  README.md
Pixeler2PC/: CMakeLists.txt  LICENSE  README.md
Pixeler2PC/src/: main.cpp
Pixeler2PC/src/context/files/: FilesContext.cpp  FilesContext.h
Pixeler2PC/src/context/games/: GameListContext.cpp
Pixeler2PC/src/context/games/rpg/: RpgContext.cpp  RpgContext.h
Pixeler2PC/src/context/games/rpg/map/: map_scene_0.h  map_scene_1.h  map_scene_2.h  map_scene_3.h
Pixeler2PC/src/context/games/rpg/map/tiled_proj/: 5.tmx  map_tiles.tsx
Pixeler2PC/src/context/games/rpg/scene/: RpgBaseScene.cpp  RpgBaseScene.h  RpgScene.cpp  RpgScene.h
Pixeler2PC/src/context/games/sokoban/scene/: SokobanScene.cpp
Pixeler2PC/src/context/home/: HomeContext.cpp  HomeContext.h
Pixeler2PC/src/context/menu/: MenuContext.cpp  MenuContext.h
Pixeler2PC/src/pixeler/: defines.h
Pixeler2PC/src/pixeler/String/: WString.cpp  WString.h  stdlib_noniso.c  stdlib_noniso.h
Pixeler2PC/src/pixeler/driver/graphics/: DisplayWrapper.cpp  DisplayWrapper.h  graphics_setup.h
Pixeler2PC/src/pixeler/driver/graphics/Arduino_GFX/: Arduino_Canvas.cpp  Arduino_Canvas.h
Pixeler2PC/src/pixeler/driver/input/: Button.cpp  Button.h  Input.cpp  Input.h
Pixeler2PC/src/pixeler/game/: IGameScene.h
Pixeler2PC/src/pixeler/game/object/: IGameObject.cpp  IGameObject.h
Pixeler2PC/src/pixeler/game/terrain/: MapInfo.h  TerrainManager.cpp  Tile.h
Pixeler2PC/src/pixeler/manager/: ContextManager.cpp  FileManager.cpp  FileManager.h  ResManager.cpp  ResManager.h  WavManager.cpp  WavManager.h
Pixeler2PC/src/pixeler/plugin/lua/context/: LuaContext.cpp  LuaContext.h
Pixeler2PC/src/pixeler/plugin/lua/examples/widget/: widgets_simple.lua
Pixeler2PC/src/pixeler/plugin/lua/lua_lib/helper/: lua_helper.cpp
Pixeler2PC/src/pixeler/plugin/lua/lua_lib/register/: lua_gl.cpp
Pixeler2PC/src/pixeler/plugin/lua/lua_lib/require/: lua_sd.cpp
Pixeler2PC/src/pixeler/plugin/lua/lua_lib/type/widget/: lua_empty_layout.cpp  lua_empty_layout.h  lua_image.cpp  lua_image.h  lua_iwidget.cpp  lua_iwidget.h  lua_iwidget_cont.cpp  lua_iwidget_cont.h  lua_label.cpp  lua_label.h  lua_menu.cpp  lua_menu.h  lua_menu_item.cpp  lua_menu_item.h  lua_progress.cpp  lua_progress.h  lua_spin_item.cpp  lua_spin_item.h  lua_toggle_item.cpp  lua_toggle_item.h  lua_toggle_switch.cpp  lua_toggle_switch.h
Pixeler2PC/src/pixeler/setup/: context_id_setup.h  coprocessor_setup.h  i2c_setup.h  input_setup.h  sd_setup.h  ui_setup.h
Pixeler2PC/src/pixeler/ui/widget/notification/: Notification.h
Pixeler2PC/src/pixeler/ui/widget/text/: Label.cpp
Pixeler2PC/src/pixeler/util/img/: BmpUtil.cpp
firmware/ch32_fw/: .cproject  .project  .template  CH32_fw.launch  CH32_fw.wvproj  README.md
firmware/esp32s3_fw/: .clang-format  .gitignore  README.md  platformio.ini
firmware/hardware_tests/: .gitignore  README.md
hardware/: README.md  perfect_console.kicad_pcb  perfect_console.kicad_sch  Особливості збірки.txt
hardware/kicad_proj/: fp-info-cache  perfect_console.kicad_pcb  perfect_console.kicad_prl  perfect_console.kicad_pro  (+1 more)
(+978 files in other folders)
